fix(FootBar.module.css): icon spacing

--- a/src/components/FootBar/FootBar.module.css
+++ b/src/components/FootBar/FootBar.module.css
@@ -5,9 +5,11 @@
     width: 100%;
     height: 60px;
     background-color: white;
+}
+.footbar ul {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .fa-solid {
